# dict

./: pyproject.toml
dictionary/dictionary/: settings.py  urls.py
dictionary/words/: forms.py  models.py  urls.py  views.py
dictionary/words/static/words/css/: style.css
dictionary/words/static/words/js/: scripts.js
dictionary/words/templates/words/: base.html  delete_entry.html  entries_list.html  index.html  input_entry.html  login_user.html  register.html
