[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Azamat <medenovvaza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg = {extras = ["binary"], version = "^3.1.10"}
django-crispy-forms = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
